show user info & update user info

--- a/server/test.html
+++ b/server/test.html
@@ -4,7 +4,7 @@
     </head>
     <body>
 
-        <form action="http://localhost:5000/set_extra/123" method="post">
+        <form action="http://coreahs.iptime.org:9240/set_extra/a4641a52f89bcd4f" method="post">
             <fieldset>
                 <input type="text" name="info" placeholder="json type"></input>
             </fieldset>
